@@ -5,6 +5,8 @@
 	2,147,483,648 operations, so most people won't care.  Thanks to
 	Franco Broi for the report and testing.
 
+	* Added file locking methods to kernel and low-level API.
+
 2005-07-21  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Don't change mtime/ctime/atime to local time on read/write.
